# simpleBazelProjectsForTesting

protobufTest/: MODULE.bazel
protobufTest/prefix/libA/: BUILD
protobufTest/prefix/libB/: BUILD
protobufTest/pure/libA/: BUILD
protobufTest/pure/libB/: BUILD
protobufTest/stripped1/libA/: BUILD
protobufTest/stripped1/libB/: BUILD
protobufTest/stripped2/libA/: BUILD
protobufTest/stripped2/libB/: BUILD
simpleScalaTest/: .bazelproject  MODULE.bazel
simpleScalaTest/src/main/com/example/foo/: BUILD  Foo.scala
simpleScalaTest/src/test/com/example/foo/: BUILD  FooTest.scala
