module(name = "scala_example")

bazel_dep(name = "rules_scala", version = "7.1.6")
bazel_dep(name = "rules_jvm_external", version = "6.9")

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "2.13.17")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()
scala_deps.scalatest()
